--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas".toString())
+            }
+        }
     }
     buildTypes {
         release {
@@ -26,15 +31,14 @@ androidExtensions {
 }
 
 ext {
-    moxyVersion = '1.5.5'
+    dagger = '2.21'
     nav_version = "2.1.0-alpha02"
     archLifecycleVersion = "1.1.1"
     glide = "4.9.0"
     rxandroid = "2.1.0"
     rxkotlin = "2.3.0"
     retrofit = "2.5.0"
-    room = '2.1.0-alpha06'
-    kodein = "5.1.0"
+    room = '2.1.0-alpha07'
     appcompat = '1.0.2'
 }
 
@@ -50,24 +54,27 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
 
     implementation "androidx.room:room-runtime:$room"
+    implementation "androidx.room:room-rxjava2:$room"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     kapt "androidx.room:room-compiler:$room"
 
     implementation "androidx.recyclerview:recyclerview:1.1.0-alpha04"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.appcompat:appcompat:1.0.2"
     implementation "androidx.preference:preference:1.0.0"
-    implementation "com.google.android.material:material:1.1.0-alpha05"
+    implementation "com.google.android.material:material:1.1.0-alpha06"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
 
     implementation "com.github.bumptech.glide:glide:$glide"
 
-    implementation "com.arello-mobile:moxy:$moxyVersion"
-    implementation "com.arello-mobile:moxy-app-compat:$moxyVersion"
-    kapt "com.arello-mobile:moxy-compiler:$moxyVersion"
+    implementation 'com.tyorikan:voice-recording-visualizer:1.0.3@aar'
 
-    implementation "org.kodein.di:kodein-di-generic-jvm:$kodein"
-    implementation "org.kodein.di:kodein-di-framework-android:$kodein"
+    implementation "com.google.dagger:dagger:$dagger"
+    implementation "com.google.dagger:dagger-android-support:$dagger"
+    kapt "com.google.dagger:dagger-compiler:$dagger"
+    kapt "com.google.dagger:dagger-android-processor:$dagger"
 
     implementation "android.arch.lifecycle:runtime:$archLifecycleVersion"
     implementation "android.arch.lifecycle:extensions:$archLifecycleVersion"
@@ -76,6 +83,6 @@ dependencies {
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0-alpha04'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha04'
+    androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
 }
