--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.itis2019.lecturerecorder">
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -14,19 +17,22 @@
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity
-            android:name=".ui.recorder.RecorderActivity"
-            android:screenOrientation="portrait">
-
-        </activity>
-        <activity
             android:name=".ui.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/LightTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.recorder.RecorderActivity"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <service android:name=".service.AudioRecordService" />
     </application>
 
 </manifest>
