--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,9 +51,6 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid"
     implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlin"
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinCoroutineVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutineVersion"
-
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
@@ -64,7 +61,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     kapt "androidx.room:room-compiler:$room"
 
-    implementation "androidx.recyclerview:recyclerview:1.1.0-alpha04"
+    implementation "androidx.recyclerview:recyclerview:1.1.0-alpha05"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.appcompat:appcompat:1.0.2"
     implementation "androidx.preference:preference:1.0.0"
@@ -90,6 +87,8 @@ dependencies {
     implementation 'com.github.quickpermissions:quickpermissions-kotlin:0.4.1'
 
     implementation 'com.gauravk.audiovisualizer:audiovisualizer:0.9.2'
+
+    implementation 'com.yalantis:eqwaves:1.0.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
