--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,12 +36,12 @@ androidExtensions {
 
 ext {
     dagger = '2.21'
-    navigationVersion = "2.1.0-beta02"
+    navigationVersion = "2.2.0-alpha02"
     archLifecycleVersion = "1.1.1"
     rxandroid = "2.1.0"
     rxkotlin = "2.3.0"
     retrofit = "2.5.0"
-    room = '2.2.0-alpha01'
+    room = '2.2.0-rc01'
     appcompat = '1.0.2'
 }
 
@@ -58,15 +58,15 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room"
     implementation "androidx.room:room-rxjava2:$room"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
     kapt "androidx.room:room-compiler:$room"
 
-    implementation "androidx.recyclerview:recyclerview:1.1.0-beta01"
+    implementation "androidx.recyclerview:recyclerview:1.1.0-beta04"
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation "androidx.appcompat:appcompat:1.0.2"
-    implementation "androidx.preference:preference:1.0.0"
-    implementation "com.google.android.material:material:1.1.0-alpha09"
+    implementation "androidx.appcompat:appcompat:1.1.0"
+    implementation "androidx.preference:preference:1.1.0"
+    implementation "com.google.android.material:material:1.1.0-alpha10"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
 
