--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             android:name="com.itis2019.markrecorder.ui.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:exported="true"
             android:theme="@style/MarkRecorderTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
